--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -70,7 +70,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="radio" id="abstain-president" name="president" value="<%= abstainPresident ? abstainPresident.uniqueId : '' %>" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-president" name="president" value="<%= JSON.stringify(abstainPresident) %>" class="tgl tgl-flip" />
               <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -94,7 +94,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="radio" id="abstain-vice-president" name="vicePresident" value="<%= abstainVicePresident ? abstainVicePresident.uniqueId : '' %>" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-vice-president" name="vicePresident" value="<%= JSON.stringify(abstainVicePresident) %>" class="tgl tgl-flip" />
               <label for="abstain-vice-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -117,7 +117,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="radio" id="abstain-senator" name="senator" value="<%= abstainSenator ? abstainSenator.uniqueId : '' %>" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-senator" name="senator" value="<%= JSON.stringify(abstainSenator) %>" class="tgl tgl-flip" />
               <label for="abstain-senator" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -150,7 +150,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="radio" id="abstain-governor" name="governor" value="<%= abstainGovernor ? abstainGovernor.uniqueId : '' %>" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-governor" name="governor" value="<%= JSON.stringify(abstainGovernor) %>" class="tgl tgl-flip" />
               <label for="abstain-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -174,7 +174,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="radio" id="abstain-vice-governor" name="viceGovernor" value="<%= abstainViceGovernor ? abstainViceGovernor.uniqueId : '' %>" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-vice-governor" name="viceGovernor" value="<%= JSON.stringify(abstainViceGovernor) %>" class="tgl tgl-flip" />
               <label for="abstain-vice-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -198,7 +198,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="radio" id="abstain-board-member" name="boardMember" value="<%= abstainBoardMember ? abstainBoardMember.uniqueId : '' %>" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-board-member" name="boardMember" value="<%= JSON.stringify(abstainViceGovernor) %>" class="tgl tgl-flip" />
               <label for="abstain-board-member" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
 
